[package]
name = "webui-rs"
version = "0.1.0"
edition = "2021"
authors = ["felixmaker"]
description = "A lightweight, idiomatic Rust wrapper for WebUI."
license = "MIT"
repository = "https://github.com/felixmaker/webui-rs"
homepage = "https://github.com/felixmaker/webui-rs"
keywords = ["gui", "webui", "webview"]
categories = ["gui"]
readme = "README.md"

[lib]
name = "webui"
path = "src/lib.rs"

[dependencies]
webui-sys = { path = "../webui-sys", version = "0.1" }
