[package]
name = "webui-sys"
version = "0.1.0"
edition = "2021"
authors = ["felixmaker"]
description = "Raw FFI bindings for the WebUI library."
license = "MIT"
repository = "https://github.com/felixmaker/webui-rs"
homepage = "https://github.com/felixmaker/webui-rs"
keywords = ["gui", "webui", "webview"]
categories = ["gui"]
exclude = ["webui/.github", "webui/examples"]

[dependencies]

[build-dependencies]
cmake = "0.1"
